# zeroclaw

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile_a2a  package-lock.json
.agents/skills/notifying-telegram/: SKILL.md
.agents/skills/notifying-telegram/scripts/: receive.sh  send.sh
.agents/skills/using-beads/: SKILL.md
.beads/: beads.db-wal  beads.left.meta.json  issues.jsonl  last-touched  sync-state.json
.claude/: settings.json
crates/zeroclaw-a2a/: Cargo.toml  README.md
crates/zeroclaw-a2a/src/: channel.rs  config.rs  gateway.rs  lib.rs  pairing.rs  protocol.rs
docs/: README.md  SUMMARY.md  a2a-cleanup-progress.md  a2a-code-quality-review.md  a2a-completion-summary.md  a2a-implementation-plan.md  a2a-setup.md  a2a-task-summary.md  channels-reference.md
docs/plans/: 2026-03-04-a2a-round-trip-communication.md
docs/tools/: pi-agent.md
plans/: a2a-google-protocol-migration.md
src/: lib.rs  main.rs
src/channels/: mod.rs
src/channels/a2a/: channel.rs  mod.rs  pairing.rs  processor.rs  protocol.rs
src/config/: mod.rs  schema.rs
src/cron/: scheduler.rs
src/gateway/: a2a.rs  mod.rs
src/memory/: hygiene.rs
src/onboard/: wizard.rs
src/tools/: a2a_send.rs  mod.rs  pi_agent.rs  screenshot.rs  shell.rs
tests/: a2a_google_protocol.rs  a2a_integration.rs
